[tool.poetry]
name = "intro-to-topology"
version = "0.1.0"
description = ""
authors = ["Steven Clontz <steven.clontz@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.8.5,<4.0"
pretext = "1.0.0a1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
